fix ParallelEnv.cpp errors

--- a/CharacterEnv/cpp/CMakeLists.txt
+++ b/CharacterEnv/cpp/CMakeLists.txt
@@ -10,5 +10,5 @@ set(CMAKE_CXX_FLAGS "${CCCDLFLAGS}")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG")
 
-add_library(CharacterEnv STATIC src/CharacterEnv.cpp src/SimCharacter.cpp src/MathUtil.cpp src/IOUtil.cpp)
+add_library(CharacterEnv STATIC src/CharacterEnv.cpp src/SimCharacter.cpp src/MathUtil.cpp src/IOUtil.cpp src/ParallelEnv.cpp)
 #target_link_libraries(CharacterEnv stdc++ dart assimp boost_system)
