--- a/data/env_config.json
+++ b/data/env_config.json
@@ -5,5 +5,7 @@
     "friction_coeff": 1.0,
     "restitution_coeff": 0.0,
     "kp": "data/kp.txt",
-    "kd": "data/kd.txt"
+    "kd": "data/kd.txt",
+    "indices": "data/indices.txt",
+    "scales": "data/scales.txt"
 }
