--- a/CharacterEnv/MYMETA.yml
+++ b/CharacterEnv/MYMETA.yml
@@ -5,9 +5,9 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: '0'
+  ExtUtils::PkgConfig: '0'
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 7.64, CPAN::Meta::Converter version 2.150010'
+generated_by: 'ExtUtils::MakeMaker version 7.70, CPAN::Meta::Converter version 2.150010'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,6 +17,7 @@ no_index:
   directory:
     - t
     - inc
-requires: {}
+requires:
+  AI::MXNet: '0'
 version: '0.01'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
