--- a/data/simple_env_config.json
+++ b/data/simple_env_config.json
@@ -1,6 +1,10 @@
 {
     "env": "simple",
     "character": "data/simple_biped.json",
+    "camera": {
+        "eye": [30, 2, 20],
+        "center": [15, 2, 0]
+    },
     "friction_coeff": 1.0,
     "restitution_coeff": 0.0,
     "scales": "data/simple_env_scales.txt",
