--- a/data/mimic_env_config.json
+++ b/data/mimic_env_config.json
@@ -10,8 +10,8 @@
     "floor_z": 0.031,
     "friction_coeff": 1.0,
     "restitution_coeff": 0.0,
-    "kp": "data/kp.txt",
-    "kd": "data/kd.txt",
-    "scales": "data/scales.txt",
+    "kp": "data/mimic_env_kp.txt",
+    "kd": "data/mimic_env_kd.txt",
+    "scales": "data/mimic_env_scales.txt",
     "enableRSI": false
 }
