--- a/data/mimic_env_config.json
+++ b/data/mimic_env_config.json
@@ -6,12 +6,12 @@
         "center": [0, 0, 1],
         "up": [0, 0, 1]
     },
-    "poses": "data/positions.txt",
+    "ref_motion": "data/walk_ref.txt",
     "floor_z": 0.031,
     "friction_coeff": 1.0,
     "restitution_coeff": 0.0,
     "kp": "data/mimic_env_kp.txt",
     "kd": "data/mimic_env_kd.txt",
     "scales": "data/mimic_env_scales.txt",
-    "enableRSI": false
+    "enableRSI": true
 }
